--- a/angular/src/app/shared/components/image-input/image-input.component.html
+++ b/angular/src/app/shared/components/image-input/image-input.component.html
@@ -1,4 +1,4 @@
 <img class="w-full absolute-center" [src]="preview"><img>
 
-<input class="z-10 relative block w-full h-full" id="image" accept="image/*" type="file" [formControl]="image"
+<input class="z-10 relative block w-full h-full opacity-0" id="image" accept="image/*" type="file" [formControl]="image"
     (change)="syncImage($event)">
