try auto deploy github actions

--- a/angular/src/app/landing-page/landing-page.component.html
+++ b/angular/src/app/landing-page/landing-page.component.html
@@ -64,4 +64,4 @@
 <a class="m-auto block my-16 w-fit" mat-raised-button color="primary" [href]="zipUrl" [download]="zipName"
   [disabled]="zipId === '' "> Download optimized Image </a>
 
-<app-responsive-image-snippet [SnippetData]="getSnippetData()"></app-responsive-image-snippet>
+<app-responsive-image-snippet [snippetData]="getSnippetData()"> </app-responsive-image-snippet>
