--- a/angular/src/app/components/responsive-image-snippet/responsive-image-snippet.component.html
+++ b/angular/src/app/components/responsive-image-snippet/responsive-image-snippet.component.html
@@ -1,5 +1,5 @@
 <form class="m-auto my-7 max-w-lg" [formGroup]="snippetConfigForm">
-   
+
     <h2>Code snippet</h2>
 
     <mat-form-field class="w-full" appearance="fill">
@@ -11,11 +11,11 @@
         <!-- Default Image size -->
         <mat-form-field class="w-full" appearance="fill">
             <mat-label>Default image size</mat-label>
-            <mat-select formControlName="defaultImageSize" >
-                <mat-option value="250" > 250 px </mat-option>
-                <mat-option value="500"> 500 px </mat-option>
-                <mat-option value="700"> 750 px </mat-option>
-                <mat-option value="1000"> 1000 px </mat-option>
+            <mat-select formControlName="defaultImageSize">
+                <mat-option value="250" [disabled]="!imageSizeIsAvailable('250')"> 250 px </mat-option>
+                <mat-option value="500" [disabled]="!imageSizeIsAvailable('500')"> 500 px </mat-option>
+                <mat-option value="750" [disabled]="!imageSizeIsAvailable('750')"> 750 px </mat-option>
+                <mat-option value="1000" [disabled]="!imageSizeIsAvailable('1000')"> 1000 px </mat-option>
             </mat-select>
         </mat-form-field>
 
@@ -23,16 +23,16 @@
         <mat-form-field class="w-full" appearance="fill">
             <mat-label>Default image format</mat-label>
             <mat-select formControlName="defaultImageFormat">
-                <mat-option value="jpeg">jpeg</mat-option>
-                <mat-option value="webp">webp</mat-option>
-                <mat-option value="png">png</mat-option>
+                <mat-option value="jpeg" [disabled]="!formatIsAvailable('jpeg')">jpeg</mat-option>
+                <mat-option value="webp" [disabled]="!formatIsAvailable('webp')">webp</mat-option>
+                <mat-option value="png" [disabled]="!formatIsAvailable('png')">png</mat-option>
             </mat-select>
         </mat-form-field>
 
     </div>
 
 
-    <mat-form-field class="w-full" appearance="fill" >
+    <mat-form-field class="w-full" appearance="fill">
         <mat-label> image description </mat-label>
         <input formControlName="description" matInput placeholder="Ex. Pizza" value="Sushi">
     </mat-form-field>
@@ -57,5 +57,8 @@
 </mat-tab-group>
 
 <div class="m-auto py-8 w-fit ">
-    <p class=" text-sm ">Open source on <a class="text-blue-800" href="https://github.com/Behemoth11/responsive-images">Github</a> </p>
+    <p class=" text-sm ">Open source on <a class="text-blue-800"
+            href="https://github.com/Behemoth11/responsive-images">Github</a> </p>
 </div>
+
+INfo 2800
