- ux/ui : added upload indication

--- a/angular/src/app/components/responsive-image-snippet/responsive-image-snippet.component.html
+++ b/angular/src/app/components/responsive-image-snippet/responsive-image-snippet.component.html
@@ -1,4 +1,4 @@
-<form class="m-auto my-7 max-w-lg" [formGroup]="snippetConfigForm">
+<form class="m-auto my-7 w-full max-w-lg" [formGroup]="snippetConfigForm">
 
     <h2>Code snippet</h2>
 
@@ -60,5 +60,3 @@
     <p class=" text-sm ">Open source on <a class="text-blue-800"
             href="https://github.com/Behemoth11/responsive-images">Github</a> </p>
 </div>
-
-INfo 2800
