added option to choose configure holder

--- a/angular/src/app/landing-page/landing-page.component.html
+++ b/angular/src/app/landing-page/landing-page.component.html
@@ -34,6 +34,11 @@
           </p>
         </section>
 
+        <br />
+        <label> Placeholder width &nbsp;&nbsp;&nbsp;</label>
+        <app-number-input [formGroup]="optimizationConfig" class=" text-purple-600" formControlName="placeholderWidth">
+        </app-number-input>
+
       </div>
 
       <div>
