--- a/angular/src/app/components/responsive-image-snippet/responsive-image-snippet.component.html
+++ b/angular/src/app/components/responsive-image-snippet/responsive-image-snippet.component.html
@@ -12,10 +12,10 @@
         <mat-form-field class="w-full" appearance="fill">
             <mat-label>Default image size</mat-label>
             <mat-select formControlName="defaultImageSize">
-                <mat-option value="250" [disabled]="!imageSizeIsAvailable('250')"> 250 px </mat-option>
-                <mat-option value="500" [disabled]="!imageSizeIsAvailable('500')"> 500 px </mat-option>
-                <mat-option value="750" [disabled]="!imageSizeIsAvailable('750')"> 750 px </mat-option>
-                <mat-option value="1000" [disabled]="!imageSizeIsAvailable('1000')"> 1000 px </mat-option>
+                <mat-option value="250" [disabled]="!imageSizeIsAvailable(250)"> 250 px </mat-option>
+                <mat-option value="500" [disabled]="!imageSizeIsAvailable(500)"> 500 px </mat-option>
+                <mat-option value="750" [disabled]="!imageSizeIsAvailable(750)"> 750 px </mat-option>
+                <mat-option value="1000" [disabled]="!imageSizeIsAvailable(1000)"> 1000 px </mat-option>
             </mat-select>
         </mat-form-field>
 
@@ -45,14 +45,14 @@
 </form>
 
 <mat-tab-group class="mat-tab-body-wrapper" mat-align-tabs="center" class="max-w-screen-lg m-auto" dynamicHeight>
+    <mat-tab label="HTML">
+        <pre><code class="tab" [highlight]="getHTML()"  [lineNumbers]="true"></code></pre>
+    </mat-tab>
     <mat-tab label="CSS">
         <pre><code class="tab" [highlight]="getCSS()"  [lineNumbers]="true"></code></pre>
     </mat-tab>
     <mat-tab label="Javascript">
         <pre><code class="tab" [highlight]="getJavascript()"  [lineNumbers]="true" ></code></pre>
-    </mat-tab>
-    <mat-tab label="HTML">
-        <pre><code class="tab" [highlight]="getHTML()"  [lineNumbers]="true"></code></pre>
     </mat-tab>
 </mat-tab-group>
 
