added min/max value to number-input

--- a/angular/src/app/shared/components/number-input/number-input.component.html
+++ b/angular/src/app/shared/components/number-input/number-input.component.html
@@ -1,6 +1,6 @@
 
 <div [formGroup]="formGroup" class="inline-block"> 
 
-    <input class=" w-[8ch]" formControlName='placeholderWidth' type="number"/>
+    <input class=" w-[8ch]" formControlName='placeholderWidth' type="number" min="0" max="249"/>
 
 </div>
