--- a/angular/src/app/landing-page/landing-page.component.html
+++ b/angular/src/app/landing-page/landing-page.component.html
@@ -3,11 +3,12 @@
   <span class=" text-xl leading-5 block"> Improve your load times and obtain amazing light house scores</span><br />
   <a mat-raised-button color="primary" class=" my-8" href="#upload">Get Started</a>
 
-  <div class="-z-20 absolute top-16 right-16 bg-amber-500 p-5 rounded-full dynamic-animated">
+  <div class="-z-20 absolute top-16 right-16 rounded-full dynamic-animated circle" [style]="`">
   </div>
+
 </div>
 
-<div id="#upload" class="grid grid-cols-1 md:grid-cols-2 max-w-screen-lg w-full m-auto gap-5">
+<div id="upload"  class=" scroll-m-16 grid grid-cols-1 md:grid-cols-2 max-w-screen-lg w-full m-auto gap-5">
 
   <app-image-input class="bg-white text-lg shadow-all rounded " (newImageEvent)="syncFile($event)"></app-image-input>
 
@@ -36,8 +37,7 @@
 
         <br />
         <label> Placeholder width &nbsp;&nbsp;&nbsp;</label>
-        <app-number-input [formGroup]="optimizationConfig" class=" text-purple-600" formControlName="placeholderWidth">
-        </app-number-input>
+        <input class=" w-[8ch]" formControlName="placeholderWidth" style="outline:none;" type="number" min="0" max="249"/>
 
       </div>
 
