--- a/angular/src/app/landing-page/landing-page.component.scss
+++ b/angular/src/app/landing-page/landing-page.component.scss
@@ -3,11 +3,18 @@
 }
 
 .dynamic-animated{
-    animation: big-small-big 500s ease-in-out infinite;
+    animation: big-small-big 800s ease-in-out infinite;
 }
 
 @keyframes big-small-big {
-    0% { transform: scale(1)};
+    0% { transform: scale(0.1) translate(50%,-50%);};
 
-    50% { transform: scale(50)}
+    50% { transform: scale(1) translate(50%,-50%); };
+
+    100% { transform: scale(0.1) translate(50%,-50%);};
+}
+
+.circle {
+    padding: 20em;
+    transform-origin: top right;
 }
