- removed bug, back tick not closed

--- a/angular/src/app/landing-page/landing-page.component.html
+++ b/angular/src/app/landing-page/landing-page.component.html
@@ -3,7 +3,7 @@
   <span class=" text-xl leading-5 block"> Improve your load times and obtain amazing light house scores</span><br />
   <a mat-raised-button color="primary" class=" my-8" href="#upload">Get Started</a>
 
-  <div class="-z-20 absolute top-16 right-16 rounded-full dynamic-animated circle" [style]="`">
+  <div class="-z-20 absolute top-16 right-16 rounded-full dynamic-animated circle" [style]="">
   </div>
 
 </div>
