--- a/angular/src/app/landing-page/landing-page.component.html
+++ b/angular/src/app/landing-page/landing-page.component.html
@@ -3,15 +3,17 @@
   <span class=" text-xl leading-5 block"> Improve your load times and obtain amazing light house scores</span><br />
   <a mat-raised-button color="primary" class=" my-8" href="#upload">Get Started</a>
 
-  <div class="-z-20 absolute top-16 right-16 rounded-full dynamic-animated circle" [style.backgroundColor]="splashColor">
+  <div class="-z-20 absolute top-16 right-16 rounded-full dynamic-animated circle"
+    [style.backgroundColor]="splashColor">
   </div>
 
 </div>
 
-<h2 class="text-center mb-9 text-3xl tracking-wider font-extrabold scroll-m-16 " id="upload" > Optimize an image</h2>
+<h2 class="text-center mb-9 text-3xl tracking-wider font-extrabold scroll-m-16 " id="upload"> Optimize an image</h2>
 <div class="grid grid-cols-1 md:grid-cols-2 max-w-screen-lg w-full m-auto gap-5">
 
-  <app-image-input label="Image to optimize input" class="bg-white text-lg shadow-all rounded " (newImageEvent)="syncFile($event)"></app-image-input>
+  <app-image-input label="Image to optimize input" [maxFileSize]="5" class="bg-white text-lg shadow-all rounded "
+    (newImageEvent)="syncFile($event)"></app-image-input>
 
 
   <form [formGroup]="optimizationConfig" class="flex flex-col justify-between py-2">
@@ -37,8 +39,11 @@
         </section>
 
         <br />
-        <label for="placeholderWidthInput"> Placeholder width &nbsp;&nbsp;&nbsp;</label>
-        <input id="placeholderWidthInput" class=" w-[8ch]" formControlName="placeholderWidth" style="outline:none;" type="number" min="0" max="249"/>
+        <label
+          matTooltip="placeholder base64 that appears before image loads. Set to zero if you do not desire any placeholder"
+          for="placeholderWidthInput"> Placeholder width &nbsp;&nbsp;&nbsp;</label>
+        <input id="placeholderWidthInput" class=" w-[8ch]" formControlName="placeholderWidth" style="outline:none;"
+          type="number" min="0" max="249" />
 
       </div>
 
@@ -67,7 +72,7 @@
   </form>
 </div>
 
-<a class="m-auto block my-16 w-fit" mat-raised-button color="primary" [href]="zipUrl" [download]="zipName"
+<a class="m-auto block my-16 w-fit" mat-raised-button color="primary" [href]="zipUrl" [download]="zipName+'.zip'"
   [disabled]="zipId === '' "> Download optimized Images </a>
 
 <div class=" w-full max-w-2xl m-auto">
