--- a/angular/src/app/landing-page/landing-page.component.html
+++ b/angular/src/app/landing-page/landing-page.component.html
@@ -65,9 +65,11 @@
 
     </div>
 
-    <button class="w-fit mx-auto" mat-raised-button color="primary" (click)="onSubmit($event)"
-      [disabled]="file === null"> Optimize
+    <mat-progress-bar class="m-2" [style.opacity]="isLoading && 1 || 0" mode="indeterminate"></mat-progress-bar>
+    <button class="w-fit mx-auto relative" mat-raised-button color="primary" (click)="onSubmit($event)"
+      [disabled]="file === null || isLoading"> Optimize
     </button>
+
 
   </form>
 </div>
