--- a/angular/src/app/shared/components/image-input/image-input.component.html
+++ b/angular/src/app/shared/components/image-input/image-input.component.html
@@ -5,7 +5,7 @@
 </ng-template>
 
 <div
-    [ngClass]="(size.width >= size.height && 'w-full absolute-center' || 'h-full absolute-center') + ' flex flex-col w-fit px-5 py-2 rounded shadow-md bg-white backdrop-blur-lg' ">
+    class="flex flex-col w-fit px-5 py-2 rounded shadow-md bg-white backdrop-blur-lg absolute-center">
     <p class="w-fit m-auto">Drag and drop or</p> <br />
     <button mat-stroked-button color="warm" class="w-fit m-auto text-green-700"> Upload </button>
 </div>
