- now using raw value for snippet

--- a/angular/src/app/landing-page/landing-page.component.html
+++ b/angular/src/app/landing-page/landing-page.component.html
@@ -74,7 +74,7 @@
   </form>
 </div>
 
-<a class="m-auto block my-16 w-fit" mat-raised-button color="primary" [href]="zipUrl" [download]="zipName+'.zip'"
+<a class="m-auto block my-16 w-fit" mat-raised-button color="primary" [href]="zipUrl" [download]="zipName"
   [disabled]="zipId === '' "> Download optimized Images </a>
 
 <div class=" w-full max-w-2xl m-auto">
