changed description place holder

--- a/angular/src/app/landing-page/landing-page.component.html
+++ b/angular/src/app/landing-page/landing-page.component.html
@@ -39,7 +39,7 @@
         </section>
 
         <br />
-        <label for="placeholderWidthInput"> Placeholder width &nbsp;&nbsp;&nbsp;</label>
+        <label for="placeholderWidthInput"> Placeholder width ( px ) &nbsp;&nbsp;&nbsp;</label>
         <input id="placeholderWidthInput"
           matTooltip="placeholder base64 that appears before image loads. Set to zero if you do not desire any placeholder"
           class=" w-[8ch]" formControlName="placeholderWidth" style="outline:none;" type="number" min="0" max="249" />
